--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a href="#contact" class="nav__link">Contact</a>
             </li>
             <li class="nav__item">
-                <a href="https://drive.google.com/drive/my-drive" class="nav__link">My CV</a>
+                <a href="assets/mycv.pdf" download class="nav__link">My CV</a>
               </li>
           </ul>
         </div>
