updating the projects

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a href="#contact" class="nav__link">Contact</a>
             </li>
             <li class="nav__item">
-                <a href="assets/mycv.pdf" download class="nav__link">My CV</a>
+                <a href="assets/Arpan_Shrestha_-_Node_Js_Developer.pdf" download class="nav__link">My CV</a>
               </li>
           </ul>
         </div>
@@ -260,6 +260,10 @@
           <a href="https://github.com/crestharpan/React-projects/tree/main/travel-list" class="work__img">
             <img src="assets/img/Screenshot (56).png" alt="" />
             <span>Travel-List</span>
+          </a>
+          <a href="https://github.com/crestharpan/React-projects/tree/main/split-bill" class="work__img">
+            <img src="assets/img/Screenshot (121).png" alt="" />
+            <span>Split Bill</span>
           </a>
           
           </a>
