fixing the email

--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
           <form action="" class="contact__form">
             <input type="text" placeholder="Name" id ="name"class="contact__input" />
             <input type="mail" placeholder="Email" id="mail"class="contact__input" />
+            <input type="text" placeholder="Subject" id="Subject"class="contact__input" />
             <textarea
               name=""
               id="text"
@@ -309,6 +310,7 @@
 
     <!--===== MAIN JS =====-->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/emailScript.js"></script>
 
   </body>
 </html>
