Fixed the big in email Js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/png" href="./assets/img/favicon.png">
 
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/emailScript.js"></script>
     <!-- =====BOX ICONS===== -->
     <link
       href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
@@ -279,7 +278,7 @@
           <form action="" class="contact__form">
             <input type="text" placeholder="Name" id ="name"class="contact__input" />
             <input type="mail" placeholder="Email" id="mail"class="contact__input" />
-            <input type="text" placeholder="Subject" id="Subject"class="contact__input" />
+            <input type="text" placeholder="Subject" id="subject"class="contact__input" />
             <textarea
               name=""
               id="text"
@@ -287,7 +286,7 @@
               rows="10"
               class="contact__input"
             ></textarea>
-          <button class="contact__button button" type="submit" onclick="sendMail()">Submit</button>
+          <button class="contact__button button" type="submit" id="button">Submit</button>
           </form>
         </div>
       </section>
@@ -309,6 +308,11 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--===== MAIN JS =====-->
+
+    <script>
+    
+ 
+    </script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/emailScript.js"></script>
 
